--- a/ctrl.ui
+++ b/ctrl.ui
@@ -1,21 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>ctrl</class>
- <widget name="ctrl" class="QWidget">
+ <widget class="QWidget" name="ctrl">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>180</width>
+    <height>180</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
  </widget>
- <pixmapfunction/>
+ <resources/>
  <connections/>
 </ui>
