--- a/win32OOP/PalmAOOP/lmengineeringmodel.ui
+++ b/win32OOP/PalmAOOP/lmengineeringmodel.ui
@@ -166,9 +166,9 @@
   <widget class="QWidget" name="horizontalLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>260</x>
      <y>20</y>
-     <width>160</width>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -187,6 +187,13 @@
      </widget>
     </item>
     <item>
+     <widget class="QLabel" name="X">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QLabel" name="label_3">
       <property name="font">
        <font>
@@ -196,6 +203,13 @@
       </property>
       <property name="text">
        <string>y:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="Y">
+      <property name="text">
+       <string/>
       </property>
      </widget>
     </item>
@@ -212,26 +226,46 @@
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QLabel" name="Z">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QWidget" name="horizontalLayoutWidget_3">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>52</width>
-     <height>29</height>
+     <width>166</width>
+     <height>31</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <family>微软雅黑</family>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Hands:</string>
-   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="font">
+       <font>
+        <family>微软雅黑</family>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Hands Count:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="HANDSCOUNT">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
